can you feel it? its the storm that is approaching

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -130,15 +130,15 @@ block.javapod-Fluoresilt_refinery.name = [#23DBDE]Fluoresilt refinery
 block.javapod-Fluoresilt_refinery.description =  Refines fluoresilt into usable material.
 #end blocks
 #units
-unit.javapod-Thera.name = [#590e14]Thera
+unit.javapod-Thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
 unit.javapod-Thera.description = Flying unit that Launchs missile at enemies.
-unit.javapod-Imp.name = [#590e14]Imp
+unit.javapod-Imp.name = [#590e14]I[#500c12]m[#470b10]p
 unit.javapod-Imp.description = A self destruct unit that fly off once it attacked or get killed in battle.
-unit.javapod-Imp-float.name = [#590e14]Reincarnation
-unit.javapod-Imp-float.description = Floating body of the imp, can attack for one more time.
-unit.javapod-Carci.name = [#590e14]Carci
+unit.javapod-DeathImp.name = [#590e14]Rein[#500c12]car[#470b10]nat[#3e090e]ion
+unit.javapod-DeathImp.description = Floating body of the imp, can attack for one more time.
+unit.javapod-Carci.name = [#590e14]C[#500c12]a[#470b10]r[#3e090e]c[#35080c]i
 unit.javapod-Carci.description = A ranged area attacker which deal devasting damage to enemies, cannot attack air units.
-unit.javapod-Autus.name = [#590e14]Autus
+unit.javapod-Autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
 unit.javapod-Autus.description = Heavy armored zerg, decreases damage taken while attacking.
 unit.javapod-Autus.details = Imagine a mace, yes a mace. Now imagine them on cocaine.
 unit.javapod-Hivedefender.name = [#A865C9]Hive defender
