--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,36 +3,36 @@ status.javapod-dissolving.name = [#A865C9]Dissolving
 status.javapod-dissolving.description = Mr hydro, I don't feel so good
 #end status
 #items
+item.javapod-Azurite.name = [#245485]Azurite
+item.javapod-Azurite.description = Raw Azurite. The purest one.
+item.javapod-Biomass.name = [#8B73C7]Biomass
+item.javapod-Biomass.description = A material created from mixing spore pod together. Foundation of basically every zerg buildings.
+item.javapod-Biomass.details = Extremely dangerous if consumed, x5 the dose of normal spore pod. Wait who eat it anyway?
 item.javapod-BioSil.name = [#45368F]BioSil
 item.javapod-BioSil.description = A alloy made from graphite, silicon and biomass, used for many things.
 item.javapod-BioSil.details = "What if we mix silicon and biomass together?" They said... and so they did, it was a big success.
-item.javapod-biomass.name = [#8B73C7]Biomass
-item.javapod-biomass.description = A material created from mixing spore pod together. Foundation of basically every zerg buildings.
-item.javapod-biomass.details = Extremely dangerous if consumed, x5 the dose of normal spore pod. Wait who eat it anyway?
-item.javapod-Nanitealloy.name = [#45368F]Nanite alloy
-item.javapod-Nanitealloy.description = A advanced resource that is created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [white]and [grey]Silicon [white]together.
-item.javapod-Nanitealloy.details =  [#f0]Highly unstable, please use with caution, lack of carefulness may lead to explosion or fire hazard.
-item.javapod-Voltaicgas.name = [#45368F]Voltaic gas
-item.javapod-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together.
-item.javapod-Voltaicgas.details = They said its a gas but are they really a gas?
 item.javapod-Carbine-composite.name =[#45368F]Carbine composite
 item.javapod-Carbine-composite.description = Made by mixing biosili, nanite and mineral together. Used for advanced zerg unit.
 item.javapod-Carbine-composite.details = THE GREGTECH, IT'S REAL
-item.javapod-Neocells.name = [#590e14]Neocell
-item.javapod-Neocells.description = Stabilized neoplasm contained inside a cell, flammable and may explode if not handled correctly.
-item.javapod-Neocells.details = It would be worse if the neoplasm inside get relased...
-item.javapod-Zinc.name = [#747474]Zinc
-item.javapod-Zinc.description = Raw zinc. What else do you expect from it? It just zinc
-item.javapod-Vanadium.name = [#485767]Vanadium
-item.javapod-Vanadium.description = Raw vanadium, can be refined.
-item.javapod-Azurite.name = [#245485]Azurite
-item.javapod-Azurite.description = Raw Azurite. The purest one.
-item.javapod-VCA.name = [#303a45]Vanadium Carbide alloy
-item.javapod-VCA.description = Made from mixing Spore pod and Vanadium at very high tempeture, Very tough.
 item.javapod-Fluoresilt.name = [#23DBDE]Fluoresilt
 item.javapod-Fluoresilt.description = Fluoresilt, can be refined.
 item.javapod-Fluorite.name = [#23DBDE]Fluorite
 item.javapod-Fluorite.description = Refined fluoresilt.
+item.javapod-Nanitealloy.name = [#45368F]Nanite alloy
+item.javapod-Nanitealloy.description = A advanced resource that is created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [white]and [grey]Silicon [white]together.
+item.javapod-Nanitealloy.details =  [#f0]Highly unstable, please use with caution, lack of carefulness may lead to explosion or fire hazard.
+item.javapod-Neocells.name = [#590e14]Neocell
+item.javapod-Neocells.description = Stabilized neoplasm contained inside a cell, flammable and may explode if not handled correctly.
+item.javapod-Neocells.details = It would be worse if the neoplasm inside get relased...
+item.javapod-Vanadium.name = [#485767]Vanadium
+item.javapod-Vanadium.description = Raw vanadium, can be refined.
+item.javapod-VCA.name = [#303a45]Vanadium Carbide alloy
+item.javapod-VCA.description = Made from mixing Spore pod and Vanadium at very high tempeture, Very tough.
+item.javapod-Voltaicgas.name = [#45368F]Voltaic gas
+item.javapod-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together.
+item.javapod-Voltaicgas.details = They said its a gas but are they really a gas?
+item.javapod-Zinc.name = [#747474]Zinc
+item.javapod-Zinc.description = Raw zinc. What else do you expect from it? It just zinc
 #end items
 #Environment
 block.javapod-tile.name = [#A865C9]Dark floor
