--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,6 @@
 #status
-status.javapod-dissolving.name = [#A865C9]Dissolving
-status.javapod-dissolving.description = Mr hydro, I don't feel so good
+status.javapod-Dissolving.name = [#A865C9]Dissolving
+status.javapod-Dissolving.description = Mr hydro, I don't feel so good
 #end status
 #items
 item.javapod-Azurite.name = [#245485]Azurite
