--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -188,6 +188,8 @@ unit.javapod-Lobber.name = [#A865C9]Lobber
 unit.javapod-Lobber.description = A small swarmy units created by behomoth to annoy enemies and drain their ammo [#f0]Don't underestimate those little guys.
 unit.javapod-Gorgon.name = [#A865C9]Gorgon Battleship
 unit.javapod-Gorgon.description = It's a WALKING battleship from Starcraft 2
+unit.javapod-Frost.name = [#00b5ff]Frost - The frozen flame
+unit.javapod-Frost.description = An autus, frozen in this heatless wasteland, loses everything it have, a frozen, heartless shell of its former self.
 #end units
 #sectors
 sector.javapod-Ski.name = Above the skies
