--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,8 @@
 #status
 status.javapod-Dissolving.name = [#A865C9]Dissolving
 status.javapod-Dissolving.description = Mr hydro, I don't feel so good
+status.javapod-Frostshield.name = [#A865C9]Frostshield
+status.javapod-Frostshield.description = The frozen shield will protect it's creator till the end of time.
 #end status
 #items
 item.javapod-Azurite.name = [#245485]Azurite
@@ -188,8 +190,8 @@ unit.javapod-Lobber.name = [#A865C9]Lobber
 unit.javapod-Lobber.description = A small swarmy units created by behomoth to annoy enemies and drain their ammo [#f0]Don't underestimate those little guys.
 unit.javapod-Gorgon.name = [#A865C9]Gorgon Battleship
 unit.javapod-Gorgon.description = It's a WALKING battleship from Starcraft 2
-unit.javapod-Frost.name = [#00b5ff]Frost - The frozen flame
-unit.javapod-Frost.description = An autus, frozen in this heatless wasteland, loses everything it have, a frozen, heartless shell of its former self.
+unit.javapod-Frost.name = [#00b5ff]Frost
+unit.javapod-Frost.description = An autus, frozen in this heatless wasteland, loses everything it have, a frozen, heartless shell of its former self. It is recommended to attack it from faraway.
 #end units
 #sectors
 sector.javapod-Ski.name = Above the skies
