--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -191,7 +191,7 @@ unit.javapod-Lobber.description = A small swarmy units created by behomoth to an
 unit.javapod-Gorgon.name = [#A865C9]Gorgon Battleship
 unit.javapod-Gorgon.description = It's a WALKING battleship from Starcraft 2
 unit.javapod-Frost.name = [#00b5ff]Frost
-unit.javapod-Frost.description = An autus, frozen in this heatless wasteland, loses everything it have, a frozen, heartless shell of its former self. It is recommended to attack it from faraway.
+unit.javapod-Frost.description = Evolved (yes, machine can evolve, zerg machine logic) armor that can tolerate the harsh cold of the mountains, this creatures live on the coldest area of the planet, isolate themselves from the rest of the swarm.
 #end units
 #sectors
 sector.javapod-Ski.name = Above the skies
