--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -2,7 +2,7 @@
 status.javapod-Dissolving.name = [#A865C9]Dissolving
 status.javapod-Dissolving.description = Mr hydro, I don't feel so good
 status.javapod-Frostshield.name = [#A865C9]Frostshield
-status.javapod-Frostshield.description = The frozen shield will protect it's creator till the end of time.
+status.javapod-Frostshield.description = WHY WON'T YOU FUCKING DIE!? \nStatus effect son.
 #end status
 #items
 item.javapod-Azurite.name = [#245485]Azurite
