AND IT WILL COME LIKE A FLOOD OF PLAIN

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,7 +1,7 @@
 #status
 status.javapod-Dissolving.name = [#A865C9]Dissolving
 status.javapod-Dissolving.description = Mr hydro, I don't feel so good
-status.javapod-Frostshield.name = [#A865C9]Frostshield
+status.javapod-Frostshield.name = [#23dbde]Frostshield
 status.javapod-Frostshield.description = WHY WON'T YOU FUCKING DIE!? \nStatus effect son.
 #end status
 #items
@@ -128,8 +128,8 @@ block.javapod-Extractor.name = [#A865C9]Extractor
 block.javapod-Extractor.description = Only can mine certain ore, but cheap.
 block.javapod-Gestator.name = [#590e14]Gestator
 block.javapod-Gestator.description = Creates neoplasm unit.
-block.javapod-Fluoresilt_refinery.name = [#23DBDE]Fluoresilt refinery
-block.javapod-Fluoresilt_refinery.description =  Refines fluoresilt into usable material.
+block.javapod-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt refinery
+block.javapod-Fluoresilt-refinery.description =  Refines fluoresilt into usable material.
 #end blocks
 #units
 unit.javapod-Thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
@@ -190,7 +190,7 @@ unit.javapod-Lobber.name = [#A865C9]Lobber
 unit.javapod-Lobber.description = A small swarmy units created by behomoth to annoy enemies and drain their ammo [#f0]Don't underestimate those little guys.
 unit.javapod-Gorgon.name = [#A865C9]Gorgon Battleship
 unit.javapod-Gorgon.description = It's a WALKING battleship from Starcraft 2
-unit.javapod-Frost.name = [#00b5ff]Frost
+unit.javapod-Frost.name = [#23dbde]Fr[#23c0de]ost
 unit.javapod-Frost.description = Evolved (yes, machine can evolve, zerg machine logic) armor that can tolerate the harsh cold of the mountains, this creatures live on the coldest area of the planet, isolate themselves from the rest of the swarm.
 #end units
 #sectors
