--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -111,8 +111,8 @@ block.jp-Oarch.name = [#A865C9]Oarch
 block.jp-Oarch.description = Shoot exploding biomass that deal splash damage to enemy.
 block.jp-Flakaccelerator.name = [#A865C9]Flak accelerator
 block.jp-Flakaccelerator.description = Shoots frag bullet at air enemies! Have more range than your normal Scatter.
-block.jp-Spore_garrison.name = [#A865C9]Spore garrison
-block.jp-Spore_garrison.description = A smaller Flak accelerator, use power instead of resource
+block.jp-Sporegarrison.name = [#A865C9]Spore garrison
+block.jp-Sporegarrison.description = A smaller Flak accelerator, use power instead of resource
 block.jp-Biomassreactor.name = [#A865C9]Biomass reactor
 block.jp-Biomassreactor.description = Funny looking impact reator, due to Biomass is in both liquid state and solid state while burning, it is used to feed reator, make less power than impact reactor but have more hp.
 block.jp-Biomassreactor.details = EXPERIMENT#107 1AM, 1/5/2XXX the reactor works fine. 5AM, 1/5/2XXX The reactor get attacked by enemies, half of the lab blew up.
@@ -148,9 +148,9 @@ unit.jp-Hivedefender.description = A BIG plane that was made to protect their hi
 unit.jp-Hivedefender.details = Ha, you get it?... I guess nobody can guess the joke
 unit.jp-Zeta.name = [#A865C9]Zeta
 unit.jp-Zeta.description = Wait the unit is hidden, how are you seeing this?
-unit.jp-Hive-Sentinel.name = [#A865C9]Hive Sentinel
-unit.jp-Hive-Sentinel.description = A Flying Living creature that protect their hive at all cost.
-unit.jp-Hive-Sentiel.details = There is a record of it killing people, please be careful.
+unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
+unit.jp-HiveSentinel.description = A Flying Living creature that protect their hive at all cost.
+unit.jp-HiveSentiel.details = There is a record of it killing people, please be careful.
 unit.jp-Sporophage.name = [#A865C9]Sporophage
 unit.jp-Sporophage.description = An advanced creature with a built in meltdown, very dangerous.
 unit.jp-Sporophage.details = Basically Hive Sentiel II.
