always .\gradlew jar before publishing, trust me

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -132,6 +132,8 @@ block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt refinery
 block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable material.
 #end blocks
 #units
+unit.jp-Gragoth.name = [#590e14]Gr[#500c12]a[#470b10]g[#3e090e]o[#35080c]th
+unit.jp-Gragoth.description = Shoot piercing orb at enemies.
 unit.jp-Thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
 unit.jp-Thera.description = Flying unit that Launchs missile at enemies.
 unit.jp-Imp.name = [#590e14]I[#500c12]m[#470b10]p
