--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -200,8 +200,8 @@ sector.jp-Ski.name = Above the skies
 sector.jp-Ski.description = multiple alien object has landed into this sector, eradicate the alien protecting the object and research it.
 sector.jp-Bird.name = Birth
 sector.jp-Bird.description = A new born alien colony is in this sector, eradicate them before they grow too far.
-sector.jp-Frosted.name = Frosted
-sector.jp-Frosted.description = A frozen beach devoid of resources, prepare yourself for the frost swarm.
+sector.jp-Frost.name = Frosted
+sector.jp-Frost.description = One of the tier 5 unit production sector, with barebone defenses. After the alien invasion, this place have become a resting place for one of the alien, Frost.
 sector.jp-Walled.name = Aslamka
 sector.jp-Walled.description = Rare Overworldly resources along with alien creatures have been detected in this area, research and eradicate whoever stand in your way.
 #end sectors
