the port is almost done

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -40,7 +40,7 @@ item.jp-Zinc.description = Raw zinc. What else do you expect from it? It just zi
 block.jp-tile.name = [#A865C9]Dark floor
 block.jp-wall.name = [#A865C9]Dark wall
 block.jp-Fluoresiltile.name = [#23DBDE]Fluoresilt
-block.jp-mosys.name = [#A865C9]Fluromoss 
+block.jp-mossy.name = [#A865C9]Fluromoss 
 block.jp-VS.name = [#A865C9]Vanadium sand
 block.jp-blackboulder.name = [#A865C9]Dark boulder
 #End environment
