final unit port

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -89,7 +89,7 @@ block.jp-SIC.name = [yellow]Imperial [#A865C9]Railgun
 block.jp-SIC.description = The ultimate alien weapon designed for the invasion of serpulo.
 block.jp-Impalercannon.name = [#A865C9]Impaler Cannon
 block.jp-Impalercannon.description = A Giant cannon designed for destroying big units.[grey] Require Biomass to use, its range is reduced in exchange for high damage.
-block.jp-Impalercannon.details = A Giant cannon designed by the drone and hive protector to protect them from The big units during the "War for the United Serpulo"
+block.jp-Impalercannon.details = Use something to protect them, theyre weak.
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
 block.jp-Artilleryturret.description = A long range turret like hail that shots biomass at enemies.
 block.jp-Sentinel.name = [#A865C9]Sentinel
@@ -97,16 +97,16 @@ block.jp-Sentinel.description = Fire a single target beam at enemies, not very g
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
 block.jp-Artilleryturret.description = A long range turret like hail that shots biomass at enemies.
 block.jp-Mitocannon.name = [#A865C9]Mitocannon
-block.jp-Mitocannon.description = Shoots 
+block.jp-Mitocannon.description = An upgraded spore garrison.
 block.jp-pool.name = [#A865C9]Incubator
 block.jp-pool.description = create small zerg units.
-block.jp-pool.details = A abandoned ground factory on fungal pass, somehow got captured by the spore considering that Crux doesnt get infested./n oh and yes, I forgor the name for the whole 5+ months
+block.jp-pool.details = Very swarmy factory.
 block.jp-Assembler.name = [#A865C9]Assembler
 block.jp-Assembler.description = Create Bigger Zerg units.
 block.jp-Assembler.details = The Biggest Factory Got Infested by the Zerg, Create the biggest units youve ever seen in your life.
 block.jp-Synapse-tower.name = [#A865C9]Synapse Tower
 block.jp-Synapse-tower.description = Create Small Flying units.
-block.jp-Synapse-tower.details = A Air Factory on Sector X got infested by the spore, now it is used to create living units.
+block.jp-Synapse-tower.details = Very swarmy floaty factory.
 block.jp-Oarch.name = [#A865C9]Oarch
 block.jp-Oarch.description = Shoot exploding biomass that deal splash damage to enemy.
 block.jp-Flakaccelerator.name = [#A865C9]Flak accelerator
@@ -115,7 +115,7 @@ block.jp-Sporegarrison.name = [#A865C9]Spore garrison
 block.jp-Sporegarrison.description = A smaller Flak accelerator, use power instead of resource
 block.jp-Biomassreactor.name = [#A865C9]Biomass reactor
 block.jp-Biomassreactor.description = Funny looking impact reator, due to Biomass is in both liquid state and solid state while burning, it is used to feed reator, make less power than impact reactor but have more hp.
-block.jp-Biomassreactor.details = EXPERIMENT#107 1AM, 1/5/2XXX the reactor works fine. 5AM, 1/5/2XXX The reactor get attacked by enemies, half of the lab blew up.
+block.jp-Biomassreactor.details = May or may not explode when destroyed.
 block.jp-Suppressor.name = [#A865C9]Suppressor
 block.jp-Suppressor.description = A Medium sized minigun that designed to kill Medium health units
 block.jp-Masscultivator.name = [#A865C9]Mass cultivator
@@ -154,7 +154,7 @@ unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
 unit.jp-HiveSentinel.description = A Flying Living creature that protect their hive at all cost.
 unit.jp-HiveSentiel.details = There is a record of it killing people, please be careful.
 unit.jp-Sporophage.name = [#A865C9]Sporophage
-unit.jp-Sporophage.description = An advanced creature with a built in meltdown, very dangerous.
+unit.jp-Sporophage.description = An advanced Hive defender with a built in meltdown, very dangerous.
 unit.jp-Sporophage.details = Basically Hive Sentiel II.
 unit.jp-Roach.name = [#A865C9]Roach
 unit.jp-Roach.description = A acid shooter that capable of attacking enemy from long range, dissolving enemy with acid.
@@ -169,15 +169,15 @@ unit.jp-Breacher.name = [#A865C9]Breacher
 unit.jp-Breacher.description = A machine of destruction, capable of destroy everything stand in its path.
 unit.jp-Drone.name = [#A865C9]Drone
 unit.jp-Drone.description = A flying drone that collect resources and wont fight back when attacked, [grey]Unless controlled by player.
+unit.jp-Drone.details = The first zerg ever created (and no, larva doesnt count), made to working for the swarm and sometime even fight.
 unit.jp-Baneling.name = [#A865C9]Baneling
 unit.jp-Baneling.description = A suicide fighter, Deal heavy damage upon death.
-unit.jp-Drone.details = The first zerg ever created (and no, larva doesnt count), made to working for the swarm and sometime even fight.
 unit.jp-Behomoth.name = [#A865C9]Behomoth
 unit.jp-Behomoth.description = A [#f0]GIANT [white]behomoth.
-unit.jp-Behomoth.details = LOG#96(ZERGS_TEAM): This is a Biggest unit we ever have yet, thanks to crux for giving us the bluepaint for free, We shall let them know the true power of the swarm.
+unit.jp-Behomoth.details = The lobber may or may not be op depending on the enemy crowd control.
 unit.jp-Scarabid.name = [#A865C9]Scarabid
 unit.jp-Scarabid.description = A walking long range spider that have area damage and long range, perfect for mid game combat, too bad it cant hit air.
-unit.jp-Scarabid.details = A spider that were made to snipe the supreme commander on the crux team, later on were use to patrol around the infested area.
+unit.jp-Scarabid.details = A walking ripple.
 unit.jp-Rizomorph.name = [#A865C9]Rizomorph
 unit.jp-Rizomorph.description = A flying zerg that shoots exploding spore seed.
 unit.jp-Purger.name = [#A865C9]Purger
@@ -188,12 +188,13 @@ unit.jp-Basilisk.description = An almost unkillable beast with high healing powe
 unit.jp-Harvester.name = [#A865C9]Harvester
 unit.jp-Harvester.description = Harvest things, unlike drone it cannot defend itself.
 unit.jp-Bomb.name = [#A865C9]Missiles
+unit.jp-Bomb.description = Once again, why and how are you reading this.
 unit.jp-Lobber.name = [#A865C9]Lobber
 unit.jp-Lobber.description = A small swarmy units created by behomoth to annoy enemies and drain their ammo [#f0]Don't underestimate those little guys.
 unit.jp-Gorgon.name = [#A865C9]Gorgon Battleship
 unit.jp-Gorgon.description = It's a WALKING battleship from Starcraft 2
 unit.jp-Frost.name = [#23dbde]Fr[#23c0de]ost
-unit.jp-Frost.description = Evolved (yes, machine can evolve, zerg machine logic) armor that can tolerate the harsh cold of the mountains, this creatures live on the coldest area of the planet, isolate themselves from the rest of the swarm.
+unit.jp-Frost.description = Evolved autus that can tolerate the harsh cold of the mountains, this creatures live on the coldest area of the planet, isolate themselves from the rest of the swarm.
 #end units
 #sectors
 sector.jp-Ski.name = Above the skies
