--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -132,6 +132,12 @@ block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt refinery
 block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable material.
 #end blocks
 #units
+unit.jp-Curbork.name = [#590e14]Cu[#500c12]rb[#470b10]o[#3e090e]rk[#35080c]s
+unit.jp-Curbork.description = Sabotages the enemies structure and units.
+unit.jp-Slasher.name = [#590e14]Sl[#500c12]a[#470b10]s[#3e090e]h[#35080c]er
+unit.jp-Slasher.description = Launchs missiles that deals heavy area damage.
+unit.jp-Sinrak.name = [#590e14]Si[#500c12]n[#470b10]r[#3e090e]a[#35080c]k
+unit.jp-Sinrak.description = Buffs ally units.
 unit.jp-Gragoth.name = [#590e14]Gr[#500c12]a[#470b10]g[#3e090e]o[#35080c]th
 unit.jp-Gragoth.description = Shoot piercing orb at enemies.
 unit.jp-Thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
