36 years without grass. Think about what that does to a man

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -108,7 +108,7 @@ block.jp-Synapse-tower.name = [#A865C9]Synapse Tower
 block.jp-Synapse-tower.description = Create Small Flying units.
 block.jp-Synapse-tower.details = Very swarmy floaty factory.
 block.jp-Oarch.name = [#A865C9]Oarch
-block.jp-Oarch.description = Shoot exploding biomass that deal splash damage to enemy.
+block.jp-Oarch.description = Shoot exploding biomass that deal splash damage and slow the enemies down.
 block.jp-Flakaccelerator.name = [#A865C9]Flak accelerator
 block.jp-Flakaccelerator.description = Shoots frag bullet at air enemies! Have more range than your normal Scatter.
 block.jp-Sporegarrison.name = [#A865C9]Spore garrison
