--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,10 +1,14 @@
 #status
+
 status.jp-Dissolving.name = [#A865C9]Dissolving
 status.jp-Dissolving.description = Mr hydro, I don't feel so good
 status.jp-Frostshield.name = [#23dbde]Frostshield
 status.jp-Frostshield.description = WHY WON'T YOU FUCKING DIE!? \nStatus effect son.
+
 #end status
+
 #items
+
 item.jp-Azurite.name = [#245485]Azurite
 item.jp-Azurite.description = Raw Azurite. The purest one.
 item.jp-Biomass.name = [#8B73C7]Biomass
@@ -35,13 +39,16 @@ item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [
 item.jp-Voltaicgas.details = They said its a gas but are they really a gas?
 item.jp-Zinc.name = [#747474]Zinc
 item.jp-Zinc.description = Raw zinc. What else do you expect from it? It just zinc
+
 #end items
+
 #Environment
+
 block.jp-tile.name = [#A865C9]Dark floor
 block.jp-wall.name = [#A865C9]Dark wall
 block.jp-Fluoresiltile.name = [#23DBDE]Fluoresilt
-block.jp-mossy.name = [#A865C9]Fluromoss 
-block.jp-VS.name = [#A865C9]Vanadium sand
+block.jp-silt-moss.name = [#A865C9]Fluromoss 
+block.jp-silt.name = [#A865C9]Vanadium sand
 block.jp-blackboulder.name = [#A865C9]Dark boulder
 #End environment
 
