splash splash splash

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -100,9 +100,9 @@ block.jp-Impalercannon.details = Use something to protect them, theyre weak.
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
 block.jp-Artilleryturret.description = A long range turret like hail that shots biomass at enemies.
 block.jp-Sentinel.name = [#A865C9]Sentinel
-block.jp-Sentinel.description = Fire a single target beam at enemies, not very good at controlling swarm of enemies.
+block.jp-Sentinel.description = Fires high damage single target laser at enemy target.Ignores armor.
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
-block.jp-Artilleryturret.description = A long range turret like hail that shots biomass at enemies.
+block.jp-Artilleryturret.description = A long range turret that shoots anti armor bullet at enemies.
 block.jp-Mitocannon.name = [#A865C9]Mitocannon
 block.jp-Mitocannon.description = An upgraded spore garrison.
 block.jp-pool.name = [#A865C9]Incubator
