--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -25,10 +25,10 @@ item.jp-Fluoresilt.description = Fluoresilt, can be refined.
 item.jp-Fluorite.name = [#23DBDE]Fluorite
 item.jp-Fluorite.description = Refined fluoresilt.
 item.jp-Nanitealloy.name = [#45368F]Nanite alloy
-item.jp-Nanitealloy.description = A advanced resource that is created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [white]and [grey]Silicon [white]together.
+item.jp-Nanitealloy.description = Created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [white]and [grey]Silicon [white]together. Used as advanced building material.
 item.jp-Nanitealloy.details =  [#f0]Highly unstable, please use with caution, lack of carefulness may lead to explosion or fire hazard.
 item.jp-Neocells.name = [#590e14]Neocell
-item.jp-Neocells.description = Stabilized neoplasm contained inside a cell, flammable and may explode if not handled correctly.
+item.jp-Neocells.description = Stabilized neoplasm contained inside a cell, flammable and may explode if not handled correctly. Used to create neoplastic structure and units.
 item.jp-Neocells.details = It would be worse if the neoplasm inside get relased...
 item.jp-Vanadium.name = [#485767]Vanadium
 item.jp-Vanadium.description = Raw vanadium, can be refined.
