--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -129,6 +129,10 @@ block.jp-Masscultivator.name = [#A865C9]Mass cultivator
 block.jp-Masscultivator.description = A Giant cultivator that uses power to make spore.
 block.jp-Lotus-panel.name = [#A865C9]Lotus panel
 block.jp-Lotus-panel.description = Generate Power from the sun, even more efficent than the normal one.
+block.jp-Oil-burner.name = [#A865C9]Oil Generator
+block.jp-Oil-burner.description = Generates power by burning oil.
+block.jp-Voltaic-burner.name = [#A865C9]Voltatic generator
+block.jp-Voltaic-burner.description = Burns Voltatic gas to generates power.
 block.jp-AcidifierModule.name = [#A865C9]Acidifier Module
 block.jp-AcidifierModule.description = Allow you to create units with apollyon assembler
 block.jp-Extractor.name = [#A865C9]Extractor
