spliting equal pain

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -215,7 +215,13 @@ unit.jp-Frost.description = Evolved autus that can tolerate the harsh cold of th
 #end units
 #sectors
 sector.jp-Ski.name = Above the skies
-sector.jp-Ski.description = multiple alien object has landed into this sector, eradicate the alien protecting the object and research it.
+sector.jp-Ski.description = One of the former power storage sector, reduced to ruin by the crux. Recently an explosion have been detected through the radar, this sector is suspected to be the origin of it.
+sector.jp-SkiHM.name = Above the skies
+sector.jp-SkiHM.description = One of the former power storage sector, reduced to ruin by the crux. Recently an explosion have been detected through the radar, this sector is suspected to be the origin of it.
+sector.jp-Dig.name = Dig site
+sector.jp-Dig.description = A resource rich area with a new type of ore detected on the this sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
+sector.jp-DigHM.name = Dig site
+sector.jp-DigHM.description = A resource rich area with a strange ore detected on the this sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
 sector.jp-Bird.name = Birth
 sector.jp-Bird.description = A new born alien colony is in this sector, eradicate them before they grow too far.
 sector.jp-Frost.name = Frosted
