--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -57,6 +57,8 @@ liquid.jp-placeholder.name = PLACEHOLDER
 liquid.jp-placeholder.description = PLACE HOLDER FOR FUTURE CONTENT.
 #end liquids
 #blocks
+block.jp-ZincExtractor.name = [#A865C9]Zinc Extractor
+block.jp-ZincExtractor.description = Extracts zinc from underground, require biomass to operate.
 block.jp-Vanadicarbide.name = [#A865C9]Vanadicarbide Alloyer
 block.jp-Vanadicarbide.description = Make Vanadium carbide alloy by mixing spore pod and vanadium. Generates heat
 block.jp-Vanadiumcarbidewall.name = [#485767]Vanadium Carbide Wall
