nodeProduce is a thing, very cool I must say

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -38,7 +38,7 @@ item.jp-Voltaicgas.name = [#45368F]Voltaic gas
 item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together.
 item.jp-Voltaicgas.details = They said its a gas but are they really a gas?
 item.jp-Zinc.name = [#747474]Zinc
-item.jp-Zinc.description = Raw zinc. What else do you expect from it? It just zinc
+item.jp-Zinc.description = Raw zinc. What else do you expect from it? Its just zinc
 
 #end items
 
