--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -107,9 +107,9 @@ block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
 block.jp-Artilleryturret.description = A long range turret that shoots anti armor bullet at enemies.
 block.jp-Mitocannon.name = [#A865C9]Mitocannon
 block.jp-Mitocannon.description = An upgraded spore garrison.
-block.jp-pool.name = [#A865C9]Incubator
-block.jp-pool.description = create small zerg units.
-block.jp-pool.details = Very swarmy factory.
+block.jp-Pool.name = [#A865C9]Incubator
+block.jp-Pool.description = create small zerg units.
+block.jp-Pool.details = Very swarmy factory.
 block.jp-Assembler.name = [#A865C9]Assembler
 block.jp-Assembler.description = Create Bigger Zerg units.
 block.jp-Assembler.details = The Biggest Factory Got Infested by the Zerg, Create the biggest units youve ever seen in your life.
@@ -163,10 +163,9 @@ unit.jp-Carci.name = [#590e14]C[#500c12]a[#470b10]r[#3e090e]c[#35080c]i
 unit.jp-Carci.description = A ranged area attacker which deal devasting damage to enemies, cannot attack air units.
 unit.jp-Autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
 unit.jp-Autus.description = Heavy armored zerg, decreases damage taken while attacking.
-unit.jp-Autus.details = Imagine a mace, yes a mace. Now imagine them on cocaine.
+unit.jp-Autus.details = Imagine a mace, yes a mace. Now imagine them on cocaine with pierce and 1000 dps.
 unit.jp-Hivedefender.name = [#A865C9]Hive defender
-unit.jp-Hivedefender.description = A BIG plane that was made to protect their hive.
-unit.jp-Hivedefender.details = Ha, you get it?... I guess nobody can guess the joke
+unit.jp-Hivedefender.description = Protect the core.
 unit.jp-Zeta.name = [#A865C9]Zeta
 unit.jp-Zeta.description = Wait the unit is hidden, how are you seeing this?
 unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
