--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -44,12 +44,12 @@ item.jp-Zinc.description = Raw zinc. What else do you expect from it? Its just z
 
 #Environment
 
-block.jp-tile.name = [#A865C9]Dark floor
-block.jp-wall.name = [#A865C9]Dark wall
+block.jp-Tile.name = [#A865C9]Dark floor
+block.jp-Wall.name = [#A865C9]Dark wall
 block.jp-Fluoresiltile.name = [#23DBDE]Fluoresilt
-block.jp-silt-moss.name = [#A865C9]Fluromoss 
-block.jp-silt.name = [#A865C9]Vanadium sand
-block.jp-blackboulder.name = [#A865C9]Dark boulder
+block.jp-Silt-moss.name = [#A865C9]Fluromoss 
+block.jp-Silt.name = [#A865C9]Vanadium sand
+block.jp-Blackboulder.name = [#A865C9]Dark boulder
 #End environment
 
 #liquids
@@ -91,9 +91,9 @@ block.jp-Voltaicchamber.description = A chamber used to mix spore, water togethe
 block.jp-Carbine-composite-smelter.name = [#A865C9]Carbine composite smelter
 block.jp-Carbine-composite-smelter.description = A factory used to make Carbine composite, require power to fuction.
 block.jp-Carbine-composite-smelter.details = CRYSTAL METH CRYSTAL METH CRYSTAL METH
-block.jp-item-pipe.name = [#A865C9]Biomass Pipe
-block.jp-item-pipe.description = Transfer item to wherever you want, very fast.
-block.jp-item-pipe.details = pro tip: mix slag and oil together to enable sandbox mode
+block.jp-Item-pipe.name = [#A865C9]Biomass Pipe
+block.jp-Item-pipe.description = Transfer item to wherever you want, very fast.
+block.jp-Item-pipe.details = pro tip: mix slag and oil together to enable sandbox mode
 block.jp-SIC.name = [yellow]Imperial [#A865C9]Railgun
 block.jp-SIC.description = The ultimate alien weapon designed for the invasion of serpulo.
 block.jp-Impalercannon.name = [#A865C9]Impaler Cannon
