--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -12,30 +12,30 @@ status.jp-Frostshield.description = WHY WON'T YOU FUCKING DIE!? \nStatus effect 
 item.jp-Azurite.name = [#245485]Azurite
 item.jp-Azurite.description = Raw Azurite. The purest one.
 item.jp-Biomass.name = [#8B73C7]Biomass
-item.jp-Biomass.description = A material created from mixing spore pod together. Foundation of basically every zerg buildings.
+item.jp-Biomass.description = A material created from mixing spore pod together. Used in most zerggy buildings.
 item.jp-Biomass.details = Extremely dangerous if consumed, x5 the dose of normal spore pod. Wait who eat it anyway?
 item.jp-BioSil.name = [#45368F]BioSil
-item.jp-BioSil.description = A alloy made from graphite, silicon and biomass, used for many things.
+item.jp-BioSil.description = A alloy made from graphite, silicon and biomass, used to make more advanced material and buildings.
 item.jp-BioSil.details = "What if we mix silicon and biomass together?" They said... and so they did, it was a big success.
 item.jp-Carbine-composite.name =[#45368F]Carbine composite
-item.jp-Carbine-composite.description = Made by mixing biosili, nanite and mineral together. Used for advanced zerg unit.
+item.jp-Carbine-composite.description = Made by mixing biosili, nanite and mineral together. Used as building material and fuel.
 item.jp-Carbine-composite.details = THE GREGTECH, IT'S REAL
 item.jp-Fluoresilt.name = [#23DBDE]Fluoresilt
-item.jp-Fluoresilt.description = Fluoresilt, can be refined.
+item.jp-Fluoresilt.description = Used for production of other refined material.
 item.jp-Fluorite.name = [#23DBDE]Fluorite
-item.jp-Fluorite.description = Refined fluoresilt.
+item.jp-Fluorite.description = Glow stick.
 item.jp-Nanitealloy.name = [#45368F]Nanite alloy
-item.jp-Nanitealloy.description = Created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [white]and [grey]Silicon [white]together. Used as advanced building material.
+item.jp-Nanitealloy.description = Created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [white]and [grey]Silicon [white]together. Used as an advanced building material.
 item.jp-Nanitealloy.details =  [#f0]Highly unstable, please use with caution, lack of carefulness may lead to explosion or fire hazard.
 item.jp-Neocells.name = [#590e14]Neocell
 item.jp-Neocells.description = Stabilized neoplasm contained inside a cell, flammable and may explode if not handled correctly. Used to create neoplastic structure and units.
 item.jp-Neocells.details = It would be worse if the neoplasm inside get relased...
 item.jp-Vanadium.name = [#485767]Vanadium
-item.jp-Vanadium.description = Raw vanadium, can be refined.
+item.jp-Vanadium.description = Raw vanadium, can be used for production of other refined material.
 item.jp-VCA.name = [#303a45]Vanadium Carbide alloy
-item.jp-VCA.description = Made from mixing Spore pod and Vanadium at very high tempeture, Very tough.
+item.jp-VCA.description = Made from mixing Spore pod and Vanadium at very high tempeture, Used in making wall.
 item.jp-Voltaicgas.name = [#45368F]Voltaic gas
-item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together.
+item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together. Used as fuel.
 item.jp-Voltaicgas.details = They said its a gas but are they really a gas?
 item.jp-Zinc.name = [#747474]Zinc
 item.jp-Zinc.description = Raw zinc. What else do you expect from it? Its just zinc
@@ -66,16 +66,16 @@ block.jp-Vanadiumcarbidewall.description = An immortal wall, made to withstand t
 block.jp-Zincextractor.name = [#A865C9]Zinc extractor
 block.jp-Zincextractor.description = Extract zinc from zinc ore, don't ask why its currently not working.
 block.jp-Sporecore.name = [#A865C9]Hatchery
-block.jp-Sporecore.description = A infested core, Defended by Hive defender
+block.jp-Sporecore.description = Core of the base. Stores more resource than a shard core.
 block.jp-Neostabilizer.name = [#A865C9]Neostabilizer
-block.jp-Neostabilizer.description = A machine that stabilize neoplasm into a cell... Thats it, what do you expect more from it?
+block.jp-Neostabilizer.description = Stores neoplasm into a cell that can be used for later.
 block.jp-Hive.name = [#A865C9]Hive
-block.jp-Hive.description = A Bigger infested core.
+block.jp-Hive.description = Core of the base. Stores even more resource.
 block.jp-Nydusaecore.name = [#A865C9]Nydusae Core
-block.jp-Nydusaecore.description = The biggest core.
+block.jp-Nydusaecore.description = Core of the base. The biggest one.
 block.jp-Nydusaecore.details = Seriously what do you expect from it, its just a bigger core
 block.jp-Nanoprocessor.name = [#A865C9]Biomass Processor
-block.jp-Nanoprocessor.description = Create Biomass from Spores.
+block.jp-Nanoprocessor.description = Create Biomass from Spore pod.
 block.jp-Harvester_bay.name = [#A865C9]Harvester bay
 block.jp-Harvester_bay.description = Create a single harvest that collect resources.
 block.jp-ApollyonAssembler.name = [#A865C9]Apollyon Assmbler
@@ -83,7 +83,7 @@ block.jp-ApollyonAssembler.description = Create BIG units.
 block.jp-Naniteinfuser.name = [#A865C9]Nanite infuser
 block.jp-Naniteinfuser.description = Create Nanite alloys by mixing [#add8e6]Titanium, [#301934]Spore pod and [#666b6c]Silicon [white]together.
 block.jp-Neocell-generator.name = [#A865C9]Neocell generator
-block.jp-Neocell-generator.description = Uses neocell to generate energy, dont bother asking how and why.
+block.jp-Neocell-generator.description = Turns neoplasm into... energy.
 block.jp-BioSynthesizer.name = [#A865C9]Bio Synthesizer
 block.jp-BioSynthesizer.description = Turn Graphite, Silicon and Biomass into unstable alloy.
 block.jp-Voltaicchamber.name = [#A865C9]Voltaic Chamber
