New unit, blah blah blah *insert yapping*

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -179,6 +179,8 @@ unit.jp-Roach.description = A acid shooter that capable of attacking enemy from 
 unit.jp-Zergling.name = [#A865C9]Zergling
 unit.jp-Zergling.description = A small Zerg unit, strong in swarm.
 unit.jp-Zergling.details = The second zerg units created (Drone are the first one), it seem to be the weakest combat units alone but are the strongest in swarm.
+unit.jp-Raptor.name = [#A865C9]Raptor
+unit.jp-Raptor.description = Elite zerglings, faster stronger and have wings!
 unit.jp-Interceptor.name = [#A865C9]Interceptor
 unit.jp-Interceptor.description = A small plane that capable of distract nearby enemy.
 unit.jp-Guardian.name = [#A865C9]Guardian
