--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -175,7 +175,7 @@ unit.jp-Sporophage.name = [#A865C9]Sporophage
 unit.jp-Sporophage.description = An advanced Hive defender with a built in meltdown, very dangerous.
 unit.jp-Sporophage.details = Basically Hive Sentiel II.
 unit.jp-Roach.name = [#A865C9]Roach
-unit.jp-Roach.description = A acid shooter that capable of attacking enemy from long range, dissolving enemy with acid.
+unit.jp-Roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
 unit.jp-Zergling.name = [#A865C9]Zergling
 unit.jp-Zergling.description = A small Zerg unit, strong in swarm.
 unit.jp-Zergling.details = The second zerg units created (Drone are the first one), it seem to be the weakest combat units alone but are the strongest in swarm.
